resolved fdo#67836 do not overwrite already interpreted English cell

... with a not matching locale dependent interpretation

Change-Id: I66553627cab282ed333443ee8bf687596a616a28